unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Allow_Guest_Registration__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Allow_Guest_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When enabled, registrants can signup guest within the form</inlineHelpText>
    <label>Form Allow Guest Registration</label>
    <type>Checkbox</type>
</CustomField>