unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Banner_Image__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Banner_Image__c</fullName>
    <label>Form Banner Image</label>
    <type>Url</type>
</CustomField>