unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Confirmation_Message__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Confirmation_Message__c</fullName>
    <inlineHelpText>This message will be displayed upon form completion.</inlineHelpText>
    <label>Form Confirmation Message</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>