unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Details__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Details__c</fullName>
    <inlineHelpText>This information will be displayed within the external signup form</inlineHelpText>
    <label>Form Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>