unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Heading_Subtitle__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Heading_Subtitle__c</fullName>
    <inlineHelpText>Optional: This will appear in the external form header</inlineHelpText>
    <label>Form Heading Subtitle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>