unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Heading_Title__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Heading_Title__c</fullName>
    <inlineHelpText>Optional: This will appear in the external form header. When no value is provided the Campaign name will be used.</inlineHelpText>
    <label>Form Heading Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>