unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Override_Campaign_Member__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Override_Campaign_Member__c</fullName>
    <inlineHelpText>When populated, this overrides the default CampaignMember form component for this Campaign.</inlineHelpText>
    <label>Form Override Campaign Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>