unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Registration_Link__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Registration_Link__c</fullName>
    <formula>HYPERLINK((LEFT($Api.Enterprise_Server_URL_100,FIND(&apos;.salesforce.com/&apos;, $Api.Enterprise_Server_URL_100))+&apos;site.com/s/form?flowName=cUnite_Campaign_Global_Signup_Form&amp;recordId=&apos;+CASESAFEID(Id)+&apos;&amp;{{{Recipient.SignupFormKeys__c}}}&apos;),
&apos;Open Form&apos;,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Form Registration Link</label>
    <type>Text</type>
</CustomField>