unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Submission_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Submission_Member_Status__c</fullName>
    <inlineHelpText>When someone registers, their Campaign Member Status will be set to this value</inlineHelpText>
    <label>Form Submission Member Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>