unpackaged/packages/simple-event/force-app/main/default/objects/Campaign/fields/cUnite_Form_Submit_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>cUnite_Form_Submit_Button_Label__c</fullName>
    <inlineHelpText>Optional: Override the default form submission label</inlineHelpText>
    <label>Form Submit Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>